# autonomous-quant-company

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pre-submission.yml
data/demo/: live_signals.jsonl  manifest.json  production.toml  proof_manifest.generated.json  rejected_ensemble_2019.json  walkforward_report.json
docs/: ALPHA_PROVENANCE.md  ARCHITECTURE.md  COMPETITIVE_REPORT_AND_BRAINSTORM.md  DEMO_SCRIPT.md  EXTERNAL_SUBMISSION.md  FINANCIAL_LAB_PROVENANCE.md  HERMES_RUNTIME_AND_STRIPE_SKILLS.md  JUDGE_ONE_PAGER.md  MCP_SERVER.md  NEMOCLAW_POLICY_MAP.md  NVIDIA_INTEGRATION.md  PAPER_DERIVED_VALIDATION_UPGRADES.md  PITCH.md  PRE_SUBMISSION_PLAN.md  REAL_VS_MOCK.md  REVIEW_2026-06-29_DAVI.md  SAFETY_AND_COMPLIANCE.md  STRIPE_INTEGRATION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_WRITEUP.md  VIDEO_SHOTLIST.md  VS_COMPARISON.md  WHY_HGAT_ES.md
docs/demo-video/: .gitignore  README.md
docs/demo-video/clips/: _cap_scene1.txt  _cap_scene2.txt  _cap_scene3.txt  _cap_scene4.txt  _cap_scene5.txt  financial_lab_explainer.html  flow_slide.html  report.md  scene1.srt  scene1b.srt  scene2.srt  scene2_hgat_es.html  scene3.srt  scene3_falsification.html  scene4.srt  scene4_business_loop.html  scene5.srt  scene5_close.html  theme.css
docs/demo-video/recordings/: aqtc_demo_provenance.cast
docs/demo-video/scripts/: capture_dashboard.py  capture_html_slide.py  compose.sh  concat_with_transitions.py  (+2 more)
docs/landing/: index.html  style.css
docs/proof/: README.md  stripe_test_paymentintent_redacted.json
examples/: approval_policy.yaml  business_cycle_request.json
samples/: customer_report.md
scripts/: capture_stripe_proof.sh  demo_full_cycle.py  generate_proof_manifest.py  git_commit.sh  hermes_native_smoke.sh  judge_demo_60s.sh  judge_smoke.sh  judge_smoke_v2.sh  pre_submission_secret_scan.sh  print_external_submission.sh  reproduce_submission.sh  smoke_test.sh  stripe_skills_preflight.sh
src/aqtc/: __init__.py  cli.py  config.py  events.py  mcp_server.py  paths.py  secrets.py
tests/: conftest.py  test_api.py  test_business_cycle.py  test_business_invariants.py  test_cli.py  test_config.py  test_event_hash_chain.py  test_evidence_integrity.py  test_financial_validation.py  test_harness_import.py  test_ledger_and_adapters.py  test_live_adapters.py  test_mcp_server.py  test_nemotron_adapter.py  test_policy_and_nemoclaw.py  test_provenance.py  test_public_contracts.py  test_risk_guards.py  test_secrets_and_security.py  test_strategy_integrity.py  test_stripe_mock.py  test_submission_coverage_edges.py  test_unit_gaps.py
(+28 files in other folders)
