[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-quant-company"
version = "0.1.0"
description = "Hermes-powered autonomous quantitative research company demo for NVIDIA x Stripe x Nous hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "DAVI + Cristobal"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.25"]
live = ["openai>=2.0"]
mcp = ["fastmcp>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
aqtc = "aqtc.cli:main"
aqtc-mcp = "aqtc.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
