[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-quant-company"
version = "0.2.8"
description = "Hermes-powered autonomous quantitative research company demo for NVIDIA x Stripe x Nous hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "DAVI + Cristobal"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.25"]
live = ["openai>=2.0"]
mcp = ["fastmcp>=3.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.8", "types-PyYAML"]

[project.scripts]
aqtc = "aqtc.cli:main"
aqtc-mcp = "aqtc.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["aqtc"]
branch = true
omit = [
    "*/financial_core/harness/*",
    "*/main.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/aqtc/financial_core/harness/**" = ["E", "F", "I", "UP", "B"]
"tests/**" = ["B007"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["no-any-return", "misc", "assignment", "arg-type"]
exclude = [
    "^build/",
    "^\\.venv/",
    "^src/autonomous_quant_company\\.egg-info/",
]
packages = ["aqtc"]
